--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,9 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.test
+.env.production
 .env.local
 
 # temp directory
